fixed minor layout issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,7 +156,7 @@ section {
 
 
 #chat {
-  font: 1.3em Helvetica, Arial;
+  font: 1.2em Helvetica, Arial;
   color: white;
   display: block;
   width: 100%;
@@ -174,11 +174,12 @@ section {
 
 #sidechat {
   position: absolute;
-  width: 20%;
+  width: 25%;
   background-color: #1d2024;
   display: inline-block;
   height: calc(100% - 60px);
   top: 56px;
+  left: 75%;
 }
 
 #chat_form input {
@@ -188,7 +189,8 @@ section {
 #chat_form button {
 }
 #videocontainer{
-  width: 80%;
+  width: 73%;
+  height: 100%;
   display:inline-block;
 }
 
